--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "test-wahelp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nurislamaituarov.github.io/test-wahelp/",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.6.1",
@@ -20,6 +22,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^6.0.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2"
   },
